fixed about page on mobile

--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -35,7 +35,7 @@ body {
 
 .card {
   float: left;
-  width: 33.333%;
+
   padding: .75rem;
   margin-bottom: 2rem;
   border: 0;
